--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </body>
   
   <footer>
-    <p>Developed by: Valmir Moro Conque Filho.</p>
+    <p>Developed by: Victor Matheus Bertonha.</p>
     <p>©️ All Rights Reserved.</p>
   </footer>
 
